<resources>
    <string name="app_name">CamLingo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="welcome_back">"Welcome Back!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>

    <!--  Daily Quests Main Activity  -->
    <string name="daily_quest_guide">Complete quests to earn rewards!</string>
    <string name="login_rewards">Login Rewards</string>
    <string name="todays_quest">Today\'s Quest</string>
    <string name="claim_now">Claim now</string>
    <string name="streak">Streak</string>

    <!--  Lessons Layout Text  -->
    <string name="images_questions">What do you see?</string>
    <string name="audio_questions">What do you hear?</string>
    <string name="start_quest">Start</string>
    <string name="check_answer">Check</string>
    <string name="got_it">Got it</string>
    <string name="upload_text">Upload image of…</string>
    <string name="audio_button_desc">Press button to play sound</string>
    <string name="image_desc">Identify the object shown in the image</string>
    <string name="camera_btn_desc">Open camera</string>

    <!-- Upload Image Texts/Labels -->
    <string name="upload_button_lbl">Upload Image</string>
    <string name="identify_object_button">Identify Object Photo</string>
    <!--  Daily Quest Task Activity  -->
    <string name="continue_btn_text">Continue</string>
    <string name="finish">Finish</string>
    <string name="finished_quest">You\'ve completed all tasks!</string>
    <string name="play_sound">Play Sound</string>
    <string name="progress">Progress</string>

    <!-- Strings related to Main Activity -->
    <string name="learning">My Learning</string>
    <string name="quest">Daily Quests</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="john">John Lingo</string>
    <string name="register">Register</string>

    <!--  My Learning Activity  -->
    <string name="my_learning_option1">English Basics</string>
    <string name="my_learning_option2">Picture Learning</string>
    <string name="my_account_texy">My Account</string>
    <string name="vocab_btn_txt">Vocabulary</string>
    <string name="prepos_btn_txt">Prepositions</string>
    <string name="adj_btn_txt">Adjectives</string>
    <string name="nouns_btn_txt">Nouns</string>
    <string name="verbs_btn_txt">Verbs</string>
    <string name="choose_a_lesson_txt">Choose a lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_audio_button_desc">Play Audio Button</string>
    <string name="verb_lesson_header">Common English Verbs</string>
    <string name="verbs_lesson_subtitle">Listen, Read and Repeat</string>
    <string name="prompt_name">Name</string>
    <string name="error_loading_user">Error loading user</string>
    <string name="lesson_cover_image">lesson cover image</string>
    <string name="hi">Hi</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>


</resources>