<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lesson_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background1"
    tools:context=".LessonsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_lesson_txt"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/verbs_lesson_btn"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/verbs_btn_txt"
            android:textSize="25sp"
            android:backgroundTint="@color/gold"
            android:textColor="@color/white"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/nouns_lesson_btn"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/nouns_btn_txt"
            android:textSize="25sp"
            android:backgroundTint="@color/gold"
            android:textColor="@color/white"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/adj_lesson_btn"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/adj_btn_txt"
            android:textSize="25sp"
            android:backgroundTint="@color/gold"
            android:textColor="@color/white"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/prepos_lesson_btn"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/prepos_btn_txt"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/gold"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/vocab_lesson_btn"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/vocab_btn_txt"
            android:textSize="25sp"
            android:backgroundTint="@color/gold"
            android:textColor="@color/white"
            app:cornerRadius="10dp"/>
    </LinearLayout>
</ScrollView>
