<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/cameraBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/baseline_photo_camera_24"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue_dark"
        app:cornerRadius="55dp"
        android:contentDescription="@string/camera_btn_desc"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:textSize="30sp"
        android:text="@string/upload_text"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/checkAnsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/green"
        app:cornerRadius="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/check_answer"/>
</LinearLayout>