<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/typold_black"
        android:text="@string/register"
        android:textColor="@color/blue_dark"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/grey_light"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/rodin"
        android:hint="@string/prompt_name"
        android:padding="8dp"
        android:textColor="@color/blue_dark"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/username_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/grey_light"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/rodin"
        android:hint="@string/prompt_email"
        android:padding="8dp"
        android:textColor="@color/blue_dark"
        android:textColorHighlight="@color/cardview_dark_background" />

    <EditText
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/grey_light"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/rodin"
        android:hint="@string/prompt_password"
        android:padding="8dp"
        android:textColor="@color/blue_dark"
        android:textColorHighlight="@color/cardview_dark_background"
        android:tint="@color/blue_dark" />

    <EditText
        android:id="@+id/password_input2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/grey_light"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/rodin"
        android:hint="@string/prompt_password2"
        android:padding="8dp"
        android:textColor="@color/blue_dark"
        android:textColorHighlight="@color/cardview_dark_background"
        android:tint="@color/blue_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/blue_dark"
            android:fontFamily="@font/rodin"
            android:text="@string/register"
            android:textSize="18sp"
            android:gravity="center"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/rodin"
            android:text="@string/login"
            android:textSize="18sp"
            style=""
            android:textColor="@color/blue_dark"
            app:cornerRadius="20dp" />
    </LinearLayout>



</LinearLayout>