<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_quests"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dailyQuest_toolbar"
            android:background="@color/blue_dark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetStart="10dp">

            <ImageView
                android:id="@+id/toolbar_pfp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_person_24_white"
                android:layout_gravity="start"
                android:clickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome,\nJohn Lingo"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="@font/rodin" />

        </androidx.appcompat.widget.Toolbar>

        <!-- Content Layouts -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="1"
                android:background="@color/blue_dark"
                android:padding="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="250dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textSize="30sp"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily_quest_guide"
                        android:textSize="18sp"
                        android:layout_marginTop="7dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todays_quest"
                    android:src="@drawable/treasure_chest" />
            </GridLayout>

            <!-- Additional CardViews -->

            <!-- Card 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_rewards"
                        android:layout_marginEnd="15dp"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/claim_button_DailyQuest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gold"
                        android:textAllCaps="true"
                        android:text="@string/claim_now" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_quest"
                        android:layout_marginEnd="15dp"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/startQuest_button_DailyQuest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/blue_dark"
                        android:textAllCaps="true"
                        android:text="@string/start_quest" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/black">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:padding="16dp">

                    <LinearLayout
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/streak"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="15 Days. Wow you're on fire!"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="73dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:contentDescription="@string/streak"
                        android:src="@drawable/streak_icon" />
                </GridLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
